# signaldesk

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vercel.json
app/: actions.ts  globals.css  layout.tsx  page.tsx
components/inbox/: InboxGuide.tsx  InboxOverview.tsx  InboxUiStateController.tsx  InstagramMediaPreview.tsx  ItemCard.tsx  ItemFilters.tsx  ItemSection.tsx  ItemTagEditor.tsx  ItemTagFilterForm.tsx  ItemsView.tsx  RescanSourcesButton.tsx  SourceTagEditor.tsx  SourceTagFilterForm.tsx  SourcesPanel.tsx  TabsNav.tsx  Tags.tsx
config/: sources.yaml
docs/: index.html  v2-backend-bootstrap.md  v2-product-data-spec.md
lib/inbox/: constants.ts  filters.ts  formatting.ts  item-sort.ts  item-tags.ts  metrics.ts  navigation.ts  source-table.ts  source-tags.ts  types.ts
lib/ingestion/: instagram.ts  scan.ts
lib/instagram/: connections.ts  meta.ts
lib/sources/: discovery.ts  feed.ts  instagram.ts
lib/supabase/: admin.ts  server.ts
scripts/: ingest_supabase.py  seed_supabase_sources.py
src/signaldesk/: __init__.py  cli.py  config.py  digest.py  report.py  rss.py  state.py  supabase_api.py  time.py
supabase/migrations/: 20260414130000_v2_bootstrap.sql  20260414164000_item_disposition_views.sql  20260415100000_source_management.sql  20260415133000_fix_subscribe_to_feed_source_ambiguity.sql  20260416100000_instagram_source_family.sql  20260416113000_instagram_real_ingestion.sql  20260416193000_expose_instagram_media_for_inbox.sql  20260417100000_user_instagram_connections.sql  20260421170000_item_tags_foundation.sql  (+3 more)
(+7 files in other folders)
